found a bug on homepage in mobile version with double scroll bar

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -5,5 +5,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   min-height: 100vh;
 }
